# prompt-engineer

./: .gitignore  README.md  xstest.ipynb
advisorQA/: AdvisorQA.ipynb
alpaca-eval/: pyproject.toml
alpaca-eval/steering_eval/: __init__.py  alpaca_dataset.py  alpaca_scoring.py  cli.py  conditions.py  config.py  generation.py  models.py  reflection.py  reporting.py  utils.py
alpaca-eval/tests/: test_conditions.py  test_correctness_scoring.py  test_manifest.py  test_reflection.py  test_runner.py  test_smoke_pipeline.py
