[project]
name = "steering-eval"
version = "0.1.0"
description = "AlpacaEval-first steering experiment harness."
requires-python = ">=3.12"
dependencies = [
  "alpaca-eval>=0.6.2",
  "datasets>=2.20.0",
  "matplotlib>=3.9.0",
  "openai>=1.40.0",
  "pandas>=2.2.2",
  "pyarrow>=17.0.0",
  "pydantic>=2.8.2",
  "python-dotenv>=1.0.1",
  "seaborn>=0.13.2",
  "setuptools>=75.1.0,<82",
  "tenacity>=8.5.0",
  "typer>=0.12.3",
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2.2",
]

[project.scripts]
steering-eval = "steering_eval.cli:app"

[build-system]
requires = ["hatchling>=1.25.0"]
build-backend = "hatchling.build"

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]
